# wpp

./: .gitignore  README.md  pyproject.toml
src/wpp/: __init__.py
src/zephyros/: __init__.py  _utils.py  ann_predictor.py  boost_predictor.py  empirical_predictor.py  metrics.py  physical_predictor.py  rvm_predictor.py  rvr_predictor.py  sample_data.py  svm_predictor.py  svr_predictor.py  xgb_predictor.py
tests/: test_empirical_predictor.py  test_examples.py  test_physical_predictor.py
tests/test_data/: delta_t_2.csv  delta_t_32.csv  delta_t_8.csv  delta_v_2.csv  delta_v_3.csv  delta_v_32.csv  delta_v_4.csv  delta_v_8.csv  delta_v_delta_t_1.csv  delta_v_delta_t_16.csv  delta_v_delta_t_3.csv  delta_v_delta_t_32.csv  delta_v_delta_t_8.csv  temperature_16.csv  temperature_3.csv  temperature_32.csv  temperature_4.csv  temperature_delta_t_16.csv  temperature_delta_t_2.csv  temperature_delta_t_3.csv  temperature_delta_t_32.csv  temperature_delta_t_8.csv  temperature_delta_v_16.csv  temperature_delta_v_2.csv  temperature_delta_v_3.csv  temperature_delta_v_32.csv  temperature_delta_v_4.csv  temperature_delta_v_8.csv  temperature_delta_v_delta_t_16.csv  temperature_delta_v_delta_t_2.csv  temperature_delta_v_delta_t_3.csv  temperature_delta_v_delta_t_4.csv  temperature_delta_v_delta_t_8.csv  wind_speed_16.csv  wind_speed_32.csv  wind_speed_8.csv  wind_speed_delta_t_16.csv  wind_speed_delta_t_32.csv  wind_speed_delta_t_8.csv  wind_speed_delta_v_16.csv  (+27 more)
