[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wpp"
version = "0.0.1"
authors = [
  { name="Keno Krieger", email="kriegerk@uni-bremen.de" },
]
description = "A package for wind power prediction"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kenokrieger/wpp"
Issues = "https://github.com/kenokrieger/wpp/issues"